--- a/WebApp/homepage.html
+++ b/WebApp/homepage.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-  	<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
-  	<link rel="stylesheet" href="homepage.css">
+    <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+    <link rel="stylesheet" href="homepage.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <meta charset="UTF-8">
     <title>Homepage</title>
@@ -12,11 +13,13 @@
   <body>
 
    <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
+
     <button id = "closeNav" class="w3-bar-item w3-button w3-large"
-    onclick="w3_close()">Close <i class="fa fa-close"></i></button>
-    <a href="#" id="enterProfile"class="w3-bar-item w3-button">Profile <i class="material-icons">person</i></a>
-    <a href="#" id="enterForm" class="w3-bar-item w3-button">Request For Reimbursement</a>
-    <a href="#" id="Log Out"class="w3-bar-item w3-button">Log Out</a>
+    onclick="w3_close()"><i class="fa fa-close"></i>Close </button>
+    <a href="#" id="home"class="w3-bar-item w3-button"><i class="material-icons">home</i>Home</a>
+    <a href= "#" id="enterProfile"class="w3-bar-item w3-button"><i class="material-icons">person</i>Profile </a>
+    <a href="#" id="enterForm" class="w3-bar-item w3-button"><i class="material-icons">content_paste</i>Reimbursement Form</a>
+    <a href="#" id="Log Out"class="w3-bar-item w3-button"><i class="material-icons">exit_to_app</i>Log Out</a>
     </div>
 
   <div id="main">
@@ -45,19 +48,109 @@
       </div>
   </div>
 
-  <div = profile>
+  <div id = "profile" hidden = "true">
+    <div class="w3-card-4">
+      <img src="profile_sub.png" alt="Profile">
+      <div id="userinfo" class="w3-container w3-center">
+        <p>Name: User's Name</p>
+      </div>
+
+    </div>
+
+    <h2>Reimbursement History</h2>
+    <div class="w3-responsive">
+      <table class="w3-table-all">
+      <tr>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Points</th>
+        <th>Points</th>
+        <th>Points</th>
+        <th>Points</th>
+        <th>Points</th>
+        <th>Points</th>
+        <th>Points</th>
+      </tr>
+      <tr>
+        <td>Jill</td>
+        <td>Smith</td>
+        <td>50</td>
+        <td>50</td>
+        <td>50</td>
+        <td>50</td>
+        <td>50</td>
+        <td>50</td>
+        <td>50</td>
+      </tr>
+      <tr>
+        <td>Eve</td>
+        <td>Jackson</td>
+        <td>94</td>
+        <td>94</td>
+        <td>94</td>
+        <td>94</td>
+        <td>94</td>
+        <td>94</td>
+        <td>94</td>
+      </tr>
+      <tr>
+        <td>Adam</td>
+        <td>Johnson</td>
+        <td>67</td>
+        <td>67</td>
+        <td>67</td>
+        <td>67</td>
+        <td>67</td>
+        <td>67</td>
+        <td>67</td>
+      </tr>
+      </table>
+    </div>
+
+  </div>
+
+  <div id= "form" hidden="true">
+    <div class="w3-container">
+      <h2>Input Form</h2>
+    </div>
+
+    <form class="w3-container">
+      <label class="w3-text-teal" ><b>Cost</b></label>
+      <input class="w3-input w3-border w3-light-grey" type="text" placeholder = "$">
+
+      <label class="w3-text-teal"><b>Event Description</b></label>
+      <input class="w3-input w3-border w3-light-grey" type="text" placeholder = "Description">
+
+      <label class="w3-text-teal" style ="height:200px"><b>Justification</b></label>
+      <input class="w3-input w3-border w3-light-grey" type="text" placeholder = "Reason To Participate">
 
 
-  <div>
+      <label class="w3-text-teal" ><b>Justification</b></label>
+      <select class="w3-select" name="option">
+        <option value="" disabled selected>Choose your option</option>
+        <option value="1">University Course</option>
+        <option value="2">Seminar</option>
+        <option value="3">Certification Preparation Classes</option>
+        <option value="4">Certification</option>
+        <option value="5">Technical Training</option>
+        <option value="6">Other</option>
+      </select>
 
-</div>
+       <label class="w3-text-teal" ><b>Attachment</b></label>
+      <button class="w3-btn w3-blue-grey">Register</button>
+
+     
+
+    </form>
+  </div>
+
+  </div>
+
+
 <script src="homepage.js"></script>
 
-<style>
-  h1{
-    float: right;
-  }
-</style>
+
+
 
   </body>
   
