log out button added

--- a/WebApp/homepage.html
+++ b/WebApp/homepage.html
@@ -19,7 +19,7 @@
     <a href="#" id="home"class="w3-bar-item w3-button"><i class="material-icons">home</i>Home</a>
     <a href= "#" id="enterProfile"class="w3-bar-item w3-button"><i class="material-icons">person</i>Profile </a>
     <a href="#" id="enterForm" class="w3-bar-item w3-button"><i class="material-icons">content_paste</i>Reimbursement Form</a>
-    <a href="#" id="Log Out"class="w3-bar-item w3-button"><i class="material-icons">exit_to_app</i>Log Out</a>
+    <a href="index.html" id="Log Out"class="w3-bar-item w3-button"><i class="material-icons">exit_to_app</i>Log Out</a>
     </div>
 
   <div id="main">
@@ -143,6 +143,7 @@
 
     </form>
   </div>
+
 
   </div>
 
