fixed log In page and navigation

--- a/WebApp/homepage.html
+++ b/WebApp/homepage.html
@@ -13,24 +13,25 @@
   <body>
 
    <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
-
-    <button id = "closeNav" class="w3-bar-item w3-button w3-large"
-    onclick="w3_close()"><i class="fa fa-close"></i>Close </button>
+    
     <a href="#" id="home"class="w3-bar-item w3-button"><i class="material-icons">home</i>Home</a>
     <a href= "#" id="enterProfile"class="w3-bar-item w3-button"><i class="material-icons">person</i>Profile </a>
     <a href="#" id="enterForm" class="w3-bar-item w3-button"><i class="material-icons">content_paste</i>Reimbursement Form</a>
     <a href="index.html" id="Log Out"class="w3-bar-item w3-button"><i class="material-icons">exit_to_app</i>Log Out</a>
     </div>
 
+   
+
   <div id="main">
 
   <div class="w3-teal">
-    <button id="openNav" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
+    <button id="openNav" class="w3-button w3-teal w3-xlarge">&#9776;</button>
     <div class="w3-container">
       <h1>My Page</h1>
     </div>
   </div>
 
+ 
   <div id = "content">
       <img src="tiger.jpg" alt="Car" style="width:100%">
 
