--- a/WebApp/homepage.html
+++ b/WebApp/homepage.html
@@ -13,7 +13,7 @@
   <body>
 
    <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
-    
+
     <a href="#" id="home"class="w3-bar-item w3-button"><i class="material-icons">home</i>Home</a>
     <a href= "#" id="enterProfile"class="w3-bar-item w3-button"><i class="material-icons">person</i>Profile </a>
     <a href="#" id="enterForm" class="w3-bar-item w3-button"><i class="material-icons">content_paste</i>Reimbursement Form</a>
@@ -25,9 +25,9 @@
   <div id="main">
 
   <div class="w3-teal">
-    <button id="openNav" class="w3-button w3-teal w3-xlarge">&#9776;</button>
+    <button id="openNav" class="w3-button w3-teal w3-xlarge">&#9776; </button>
     <div class="w3-container">
-      <h1>My Page</h1>
+      <h1>TRMS</h1>
     </div>
   </div>
 
