users can attach file in form

--- a/WebApp/homepage.html
+++ b/WebApp/homepage.html
@@ -112,7 +112,7 @@
 
   <div id= "form" hidden="true">
     <div class="w3-container">
-      <h2>Input Form</h2>
+      <h2>Reimbursement Form</h2>
     </div>
 
     <form class="w3-container">
@@ -138,7 +138,9 @@
       </select>
 
        <label class="w3-text-teal" ><b>Attachment</b></label>
-      <button class="w3-btn w3-blue-grey">Register</button>
+       <input class="w3-input w3-border w3-light-grey" type="file" name ="file" placeholder = "Reason To Participate">
+       
+      <button class="w3-btn w3-blue-grey attchButton">Submit</button>
 
      
 
