--- a/WebApp/index.html
+++ b/WebApp/index.html
@@ -26,7 +26,7 @@
 
         <button id="toSignIn" class="w3-btn w3-blue-grey"><a href="homepage.html">Sign In</button>
 
-         <button id= "me" class="w3-btn w3-blue-grey" ><a href = "#">Sign Up</a></button>
+         <button id= "toSignUp" class="w3-btn w3-blue-grey" >Sign Up</button>
 
       </form>
     </div>
@@ -61,7 +61,7 @@
     <script>
 
     $(document).ready(function(){
-        $("#me").click(function(){
+        $("#toSignUp").click(function(){
             
             $("#signInPage").replaceWith(document.getElementById("signUpPage").innerHTML);
           
