correct project structure

--- a/WebApp/homepage.html
+++ b/WebApp/homepage.html
@@ -116,6 +116,17 @@
     </div>
 
     <form class="w3-container">
+      <label class="w3-text-teal" ><b>Event Date</b></label>
+      <input class="w3-input w3-border w3-light-grey" type="date" placeholder = "$">
+
+      <label class="w3-text-teal" ><b>Event Time</b></label>
+      <input class="w3-input w3-border w3-light-grey" type="time" placeholder = "$">
+
+      <label class="w3-text-teal" ><b>Location</b></label>
+      <input class="w3-input w3-border w3-light-grey" type="location" placeholder = "location">
+
+      
+
       <label class="w3-text-teal" ><b>Cost</b></label>
       <input class="w3-input w3-border w3-light-grey" type="text" placeholder = "$">
 
@@ -125,8 +136,15 @@
       <label class="w3-text-teal" style ="height:200px"><b>Justification</b></label>
       <input class="w3-input w3-border w3-light-grey" type="text" placeholder = "Reason To Participate">
 
+      <label class="w3-text-teal" ><b>Grading Format</b></label>
+      <select class="w3-select" name="option">
+        <option value="" disabled selected>Choose your option</option>
+        <option value="1">Test/Exam</option>
+        <option value="2">Presentation</option>
+        
+      </select>
 
-      <label class="w3-text-teal" ><b>Justification</b></label>
+      <label class="w3-text-teal" ><b>Type of Event</b></label>
       <select class="w3-select" name="option">
         <option value="" disabled selected>Choose your option</option>
         <option value="1">University Course</option>
