bunch of changes

--- a/WebApp/homepage.html
+++ b/WebApp/homepage.html
@@ -116,8 +116,8 @@
     </div>
 
     <form class="w3-container">
-      <label class="w3-text-teal" ><b>Event Date</b></label>
-      <input class="w3-input w3-border w3-light-grey" type="date" placeholder = "$">
+      <label for = "eventDate"class="w3-text-teal" ><b>Event Date</b></label>
+      <input class="w3-input w3-border w3-light-grey" type="date" placeholder = "$" id = "eventDate" name = "eventDate">
 
       <label class="w3-text-teal" ><b>Event Time</b></label>
       <input class="w3-input w3-border w3-light-grey" type="time" placeholder = "$">
