somestuff i don't know

--- a/TRMS/src/main/webapp/index.html
+++ b/TRMS/src/main/webapp/index.html
@@ -17,19 +17,19 @@
       </div>
 
       <div id="signInPage">
-        <form action="LoginServlet" method="post" class="w3-container">
+        <form id = "logingIn" class="w3-container">
 
-        <label for="username" class="w3-text-light-grey"><b>Username</b></label>
-        <input class="w3-input w3-border w3-light-grey" type="text" id="username" name="username">
+        <label class="w3-text-light-grey"><b>Username</b></label>
+        <input  id="username" class="w3-input w3-border w3-light-grey" type="text" id="username" name="username">
 
 
-        <label for="password" class="w3-text-light-grey"><b>Password</b></label>
-        <input class="w3-input w3-border w3-light-grey" type="text" id="password" name="password">
+        <label class="w3-text-light-grey"><b>Password</b></label>
+        <input id="password" class="w3-input w3-border w3-light-grey" type="text" id="password" name="password">
 
 
        
 
-        <button type = "submit" id="toSignIn" class="w3-btn w3-blue-grey">Sign In</button>
+        <button type = "submit" class="w3-btn w3-blue-grey">Sign In</button>
 
          <button id= "toSignUp" class="w3-btn w3-blue-grey" ><a href = "#">Sign Up</a></button>
 
